<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <!-- Names and titles -->
    <string name="app_name">Simple DMI app</string>
    <string name="title_activity_region">RegionActivity</string>
    <string name="title_service_location">LocationService</string>
    <string name="title_activity_preferences">Usersettings</string>
    <string name="action_settings">Settings</string>
    <!-- Misc -->
    <string name="updateButton">Update</string>
    <string name="feedback">If you have any feedback, shoot us an e-mail</string>
    <string name="mail_addr">10695@iha.dk</string>
    <string name="loading">Loading weather, please wait</string>
    <string name="region">Regional vejrudsigt for</string>
    <!-- Broadcast identifiers -->
    <string name="broadcast_receiver_main">com.kn10731.themeproject.simpledmiapp.downloadIntentMain</string>
    <string name="broadcast_receiver_city">com.kn10731.themeproject.simpledmiapp.downloadIntentCity</string>
    <!-- Intent extras -->
    <string name="intent_forecast_text">RegionText</string>
    <string name="intent_forecast_bitmap">RegionBitmap</string>
    <string name="intent_two_day_bitmap">TwoDayBitmap</string>
    <string name="intent_nine_day_bitmap">NineDayBitmap</string>
    <string name="intent_fifteen_day_bitmap">FifteenDayBitmap</string>
    <string name="intent_region">Region</string>
    <string name="intent_connection_error">ConnectionError</string>
    <string name="intent_connection_error_text">ConnectionErrorText</string>
    <!-- Error messages -->
    <string name="errormsg_internet_connection">Connection error!\r\nMake sure to turn on your internet connection.</string>
    <string name="errormsg_geo_location">\n\rThe geo location service is not available: \n\r</string>
    <string name="errormsg_location_manager">No Location manager is enabled!</string>
    <string name="errormsg_save_bitmap">Internal error: Failed saving images.</string>
    <string name="errormsg_forecast_text">\n\rFailed downloading forecast text</string>
    <string name="errormsg_download_bitmap">\n\rFailed downloading bitmap.</string>
    <!-- Real region names -->
    <string name="nordj">Nordjylland</string>
    <string name="midtj">Midt og Vestjylland</string>
    <string name="ostj">Østjylland</string>
    <string name="sydj">Syd og Sønderjylland</string>
    <string name="fyn">Fyn</string>
    <string name="vestsj">Vestsjælland og Lolland-Falster</string>
    <string name="kbh">København og Nordsjælland</string>
    <string name="born">Bornholm</string>
    <!-- URL-pieces for forecast png -->
    <string name="png_nordj">nordjylland</string>
    <string name="png_midtj">vestjylland</string>
    <string name="png_ostj">ostjylland</string>
    <string name="png_sydj">sydjylland</string>
    <string name="png_fyn">fyn</string>
    <string name="png_vestsj">vestsjaelland</string>
    <string name="png_kbh">kobenhavn</string>
    <string name="png_born">bornholm</string>
    <string name="png_nordj_2">d/n/a/l/l</string>
    <string name="png_midtj_2">d/n/a/l/l</string>
    <string name="png_ostj_2">d/n/a/l/l</string>
    <string name="png_sydj_2">d/n/a/l/l</string>
    <string name="png_fyn_2">n/y/f/_/n</string>
    <string name="png_vestsj_2">d/n/a/l/l</string>
    <string name="png_kbh_2">n/v/a/h/n</string>
    <string name="png_born_2">m/l/o/h/n</string>
    <!-- URL-pieces for forecast text -->
    <string name="text_nordj">nordjylland</string>
    <string name="text_midtj">mvjylland</string>
    <string name="text_ostj">oestjylland</string>
    <string name="text_sydj">ssjylland</string>
    <string name="text_fyn">fyn</string>
    <string name="text_vestsj">vssjaelland</string>
    <string name="text_kbh">kbhnsjaelland</string>
    <string name="text_born">bornholm</string>
    <!-- Preferences text -->
    <string name="pref_uncertainty">pref_uncertainty</string>
    <string name="pref_uncertainty_title">Show uncertainty</string>
    <string name="pref_gps_on_off">pref_gps_on_off</string>
    <string name="pref_gps_on_off_title">Use GPS for location</string>
    <string name="pref_use_location">pref_use_location</string>
    <string name="pref_use_location_title">Use current location</string>
    <string name="pref_default_city">pref_default_city</string>
    <string name="pref_default_city_title">Enter postal code</string>
    <string name="pref_default_city_summary_choose">Choose default city</string>
    <string name="pref_default_city_summary">Default postalcode is:</string>
    <string name="pref_default_region">pref_default_region</string>
    <string name="pref_default_region_title">Enter region</string>
    <string name="pref_default_region_summary">Default region is:</string>
    <string name="pref_default_region_summary_choose">Choose default region</string>

</resources>