<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_uncertainty"
        android:title="@string/pref_uncertainty_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_gps_on_off"
        android:title="@string/pref_gps_on_off_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_use_location"
        android:title="@string/pref_use_location_title" />

    <EditTextPreference
        android:inputType="number"
        android:key="@string/pref_default_city"
        android:summary="@string/pref_default_city_summary"
        android:title="@string/pref_default_city_title" />

</PreferenceScreen>